# tpm_cab_verify

./: Cargo.toml  README.md
src/: asn1.rs  cab.rs  lib.rs  roots.rs  signer.rs  timestamp.rs
tests/: cab_verify.rs
tests/examples/: TrustedTpm-04152024.cab  TrustedTpm-3-10232021.cab  altered_contents.cab
