[package]
name = "tpm_cab_verify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full", "time", "rt-multi-thread"]}

# authenticode = "0.4.2"
authenticode = {git = "https://github.com/carl-wallace/authenticode-rs.git"}
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive"] }

sha2 = "0.10.8"

cms = "0.2.3"
const-oid = { version = "0.9.5", features = ["db"] }
der = { version = "0.7.8", features = ["alloc", "derive", "oid", "pem"] }
x509-cert = "0.2.5"
x509-tsp = "0.1.0"
certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std", "webpki"], branch = "rel_with_mods"}

