[package]
name = "tpm_cab_verify"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full", "time", "rt-multi-thread"]}

# authenticode = "0.4.2"
authenticode = {git = "https://github.com/carl-wallace/authenticode-rs.git"}
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }

sha2 = "0.10.8"

cms = "0.2.3"
const-oid = { version = "0.9.6", features = ["db"] }
der = { version = "0.7.9", features = ["alloc", "derive", "oid", "pem"] }
x509-cert = "0.2.5"
x509-tsp = "0.1.0"
certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std", "webpki"]}

